# corgi-db

./: Cargo.toml  Makefile  README.md  node_pool.json
client/: Cargo.toml
control-plane/: Cargo.toml
control-plane/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  dir_utils.rs  lib.rs
corgi-client/: Cargo.toml
corgi-client/src/: main.rs
corgi-cluster-bootstrapper/: Cargo.toml
corgi-cluster-bootstrapper/src/: lib.rs  main.rs
corgi-clusterctrl/: Cargo.toml
corgi-clusterctrl/src/: lib.rs  main.rs
corgi-protocol/: Cargo.toml
corgi-protocol/src/: lib.rs
corgi-proxy/: Cargo.toml
corgi-proxy/src/: lib.rs
corgi-server/: Cargo.toml
corgi-server/src/: main.rs
local-cluster-bootstrap/: Cargo.toml
local-cluster-bootstrap/src/: main.rs
server/: Cargo.toml
