[package]
name = "control-plane"
version = "0.1.0"
authors = ["suren <suren-m>"]
edition = "2018"
default-run= "corgi-control-plane"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }

futures = { version = "0.3.13" }
tokio = { version = "1.4.0", features = ["full"]}
rand = "0.8.3"
structopt = "0.3.13"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"