[package]
name = "corgi-clusterctrl"
version = "0.1.0"
authors = ["suren <suren-m>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
futures = { version = "0.3.13" }
tokio = { version = "1.4.0", features = ["full"]}
rand = "0.8.3"