[package]
name = "local-cluster-bootstrap"
version = "0.1.0"
authors = ["suren <suren-m>"]
edition = "2018"
default-run= "corgi-local-cluster-bootstrap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
structopt = "0.3.13"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
